# tech-test

./: .gitignore  CMakeLists.txt  README.md
gnuplot/: CPU.gnuplot  RAM.gnuplot
src/client/: CMakeLists.txt  client.cpp
src/monitor/: CMakeLists.txt  monitor.cpp  monitor.h
src/server/: CMakeLists.txt  server.cpp
